#237: Added loading panel to avoid initial flicker until Ext Js creates the layout in main page
git-svn-id: https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk@6281 ff403467-3f20-0410-99e5-ff581e626a08

--- a/web/src/main/webapp/geonetwork.css
+++ b/web/src/main/webapp/geonetwork.css
@@ -1120,3 +1120,37 @@ div.pageList {
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
+
+#loading {
+  position: absolute;
+  left: 45%;
+  top: 40%;
+  margin-left: -45px;
+  padding: 2px;
+  z-index: 20001;
+  height: auto;
+  border: 1px solid #ccc;
+}
+
+#loading a {
+  color: #225588;
+}
+
+#loading .loading-indicator {
+  background: white;
+  color: #444;
+  font: bold 13px tahoma, arial, helvetica;
+  padding: 10px;
+  margin: 0;
+  height: auto;
+}
+
+#loading .loading-indicator img {
+  margin-right: 8px;
+  float: left;
+  vertical-align: top;
+}
+
+#loading-msg {
+  font: normal 10px arial, tahoma, sans-serif;
+}
